--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ Farah, Mathura-281122
 <script src="js/custom-js.js"></script>
 <script>
         var timer = setTimeout(function() {
-            window.location='http://103.179.114.203/OLASGI/Student/Welcome?utm_source=google&utm_medium=thank+you&utm_campaign=LP+brand'
+            window.location='https://sgi.servergi.com:8077/OLASGI/Student/Welcome'
         }, 4000);
     </script>
 </body>
